<resources>
    <string name="app_name">PILOTLOG - CrewLounge</string>
    <string name="loading">Loading&#8230;</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="message_close_app">Press again to quit App...</string>
    <string name="text_airfields_camelcase">Airfields</string>
    <string name="text_airfields_Info">Airfield Info</string>
    <string name="text_aircraft_camelcase">Aircraft</string>
    <string name="text_weather_camelcase">Weather</string>
    <string name="text_sign_camelcase">Sign</string>
    <string name="text_pilots_camelcase">Pilots</string>
    <string name="text_duty_camelcase">Duty</string>
    <string name="text_limit_camelcase">Limits</string>
    <string name="text_expenses_camelcase">Expenses</string>
    <string name="text_totals_camelcase">Totals</string>
    <string name="text_logbook_camelcase">Logbook</string>
    <string name="text_currency_camelcase">Qualifications</string>
    <string name="text_delay_camelcase">Delay</string>
    <string name="text_sync_camelcase">Sync</string>
    <string name="text_help">Help</string>
    <string name="message_coping_picture">Copying data (Pictures) to CrewLounge PILOTLOG version 4.0</string>
    <string name="text_sync_history_flight">Flight Records</string>
    <string name="text_sync_history_sign">Signature</string>
    <string name="text_sync_history_pilot_picture">Pilot Picture</string>
    <string name="text_sync_description">Synchronize CL-CLOUD</string>
    <string name="text_flights_description">Log new Flights and Simulator</string>
    <string name="text_pilots_description">Who\'s flying with you ?</string>
    <string name="text_airfields_description">Local Time, Earth, Navigation</string>
    <string name="text_aircraft_description">Aircraft, Simulators, Drones</string>
    <string name="text_totals_description">My flying experience</string>
    <string name="text_logbook_description">Historical flight records</string>
    <string name="text_duty_description">Log your Duty Period</string>
    <string name="text_limit_description">Flight &amp; Duty Times, Flat Rate</string>
    <string name="text_expenses_description">Hotel, Tickets, Uniform, Taxi</string>
    <string name="text_currency_description">Certificates &amp; Proficiencies</string>
    <string name="text_weather_description">Take the METAR and TAF</string>
    <string name="text_delay_description">Look-up IATA delay codes</string>
    <string name="text_tails_description">Spot an aircraft on the apron</string>
    <string name="text_sign_description">Capture Endorsements</string>
    <string name="text_about_description">Version</string>
    <string name="text_help_description">User Guide - SUPPORT</string>
    <string name="text_type">Type</string>
    <string name="text_flights">Flights</string>
    <string name="text_flight_add">Add Flight</string>
    <string name="text_flight_edit">Edit Flight</string>
    <string name="confirm_delete_all_flight_content">Confirm you want to delete ALL Flights ?</string>
    <string name="confirm_delete_all_flight_title">Delete Flights</string>
    <string name="confirm_delete_flight_title">Delete Flight</string>
    <string name="confirm_delete_single_flight">Confirm you want to %s ?</string>
    <string name="confirm_delete_all_flight_prior_content">Confirm you want to delete ALL Flights prior Today ?</string>
    <string name="confirm_delete_all_flight_older_than_6months">Confirm you want to delete Flights older than 180 days ?</string>
    <string name="confirm_delete_all_flight_in_content">Confirm you want to delete Today\'s Flights only</string>
    <string name="text_name">Name</string>
    <string name="text_iata">IATA</string>
    <string name="text_icao">ICAO</string>
    <string name="msg_title_delete_airfield">Delete Airfield</string>
    <string name="msg_allow_delete_all_airfield">To delete a single Airfield, swipe the record from right to left.\n\nUse this button to delete all airfields from the list.\n\nConfirm you want to delete ALL airfields ?</string>
    <string name="msg_cannot_delete_airfield">%s cannot be deleted from the database. This airfield is logged on a flight.\n\nThe airfield will be removed from the list.</string>
    <string name="msg_not_allow_delete_all_airfield">To delete a single Airfield, swipe the record from right to left.\n\nUse this button to delete all airfields from the list.\n\nTo delete all airfields, the Flights list must be empty.</string>
    <string name="delete_single_airfield_confirm">Confirm you want to delete %s from the Airfield list ?</string>
    <string name="delete_airfield_done">The airfield has been deleted from the mobile app database.\n\nTo permanently delete this airfield, you need to delete or de-activate the airfield from the main database on the desktop.</string>
    <string name="text_airfield_weather">Airfield Weather</string>
    <string name="text_weather_reports">WX Reports</string>
    <string name="msg_title_delete_weather">Delete Reports</string>
    <string name="msg_delete_all_weather">Confirm you want to delete ALL Weather Reports ?</string>
    <string name="setting_title">Settings</string>
    <string name="flight_prefix">FLIGHT PREFIX</string>
    <string name="company_name">COMPANY</string>
    <string name="airfield_identifier">AIRFIELD IDENTIFIER</string>
    <string name="text_about">About</string>
    <string name="text_mccpilotlog"><![CDATA[<u>crewlounge.aero</u>]]></string>
    <string name="text_visit_website">Visit the website</string>
    <string name="text_version">Version</string>
    <string name="text_build">Build</string>
    <string name="text_mcc">© MCC</string>
    <string name="text_encounter">If you encounter issues</string>
    <string name="text_like_app">If you like this app</string>
    <string name="text_contact_helpdesk"><![CDATA[<u>Contact the Help Desk</u>]]></string>
    <string name="text_rate_app"><![CDATA[<u>Rate our App in store</u>]]></string>
    <string name="text_read_terms">Read the</string>
    <string name="text_terms_and_cond"><![CDATA[<u>Terms and Conditions</u>]]></string>
    <string name="text_pilot_logbook">This pilot logbook app is a mobile companion to the main desktop application CrewLounge PILOTLOG for Windows PC and Mac OS.\nThis app cannot be used stand-alone</string>
    <string name="msg_confirm_rate_app">Thank you for rating this app.\n\nShould you encounter issues with this app, please first contact the Helpdesk 24/7 for assistance. Your feedback is most important !\n\nContinue to App Store for rating ?</string>
    <string name="msg_not_found_email_app">Sorry,  there are no email clients or applications installed on the device</string>
    <string name="msg_not_found_browser">Sorry,  there are no browser clients installed on the device</string>
    <string name="alert_search_button">SEARCH</string>
    <string name="alert_create_new_button">CREATE NEW</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_de_active_button">DE-ACTIVATE</string>
    <string name="alert_cancel_button">Cancel</string>
    <string name="alert_deleteAll_button">Delete ALL</string>
    <string name="alert_delete_button">Delete</string>
    <string name="alert_continue_button">Continue</string>
    <string name="alert_yes_button">Yes</string>
    <string name="alert_save_button">Save</string>
    <string name="alert_no_button">No</string>
    <string name="alert_remindLater_button">Remind Later</string>
    <string name="alert_view_button">View</string>
    <string name="market_label">Market</string>
    <string name="no_application_found">No Application Found</string>
    <string name="download_from_market">Download one from Android Market ?</string>
    <string name="accept_download">Yes, Please</string>
    <string name="refuse_download">No, Thanks</string>
    <string name="unavailable_market">Error, market is unavailable</string>
    <string name="return_http">Server returned HTTP </string>
    <string name="user_guide_download_error">Download error : </string>
    <string name="user_guide_downloaded">File downloaded</string>
    <string name="unavailable_network">Network unavailable</string>
    <string name="help_download_version">Getting version &#8230;</string>
    <string name="error">Error</string>
    <string name="text_numeric_code">9 (SG)</string>
    <string name="text_delay_name">Documentation, Packing</string>
    <string name="text_search">Search :</string>
    <string name="text_delay_codes">Delay Codes</string>
    <string name="delete_pilot_dialog_title">Delete Pilot</string>
    <string name="de_active_pilot_dialog_title">De-activate Pilot</string>
    <string name="delete_all_pilot_dialog_title">Delete Pilots</string>
    <string name="delete_all_pilots">To delete a single Pilot, swipe the record from right to left.\n\nUse this button to delete all pilots from the list.\n\nConfirm you want to delete ALL Pilots ?</string>
    <string name="delete_each_pilot">To delete a single Pilot, swipe the record from right to left.\n\nUse this button to delete all pilots from the list.\n\nTo delete all pilots, the Flights list must be empty.</string>
    <string name="text_flight_route_date">DATE</string>
    <string name="text_flight_currencies_task">TASK</string>
    <string name="text_flight_currencies_delay">DELAY</string>
    <string name="text_flight_currencies_today">TO DAY</string>
    <string name="text_flight_currencies_tonight">TO NIGHT</string>
    <string name="text_flight_currencies_approach">TYPE APPROACH</string>
    <string name="text_flight_currencies_operation">TYPE OPERATION</string>
    <string name="text_flight_currencies_glider">GLIDER LAUNCH</string>
    <string name="text_flight_currencies_holding">HOLDING</string>
    <string name="text_flight_currencies_fuel">FUEL</string>
    <string name="text_flight_currencies_fuel_used">FUEL USED</string>
    <string name="text_flight_currencies_fuel_planned">FUEL PLANNED</string>
    <string name="text_flight_currencies_sign_box">SIGN BOX</string>
    <string name="text_flight_currencies_ldg_day">LDG DAY</string>
    <string name="text_flight_currencies_ldg_night">LDG NIGHT</string>
    <string name="text_flight_currencies_autoland">AUTOLAND</string>
    <string name="text_flight_currencies_lifts">LIFTS</string>
    <string name="text_flight_currencies_deicing">DE-ICING</string>
    <string name="text_flight_currencies_pax">PAX</string>
    <string name="text_flight_currencies_sign_pen">SIGN PEN</string>
    <string name="hours_hint">00:00</string>
    <string name="text_edit_flight">Edit Flight</string>
    <string name="text_return_flight">Create Return Flight</string>
    <string name="text_next_flight">Create Next Flight</string>
    <string name="text_delete_flight">Delete Flight</string>
    <string name="text_edit_flight_paste">Edit Flight (paste data)</string>
    <string name="text_duty_hours_check_in">CHECK-IN</string>
    <string name="text_duty_hours_check_out">CHECK-OUT</string>
    <string name="text_duty_hours_duration">DURATION</string>
    <string name="text_duty_type_event">TYPE OF EVENT</string>
    <string name="duty_description">DESCRIPTION</string>
    <string name="text_duty_notes">NOTES</string>
    <string name="text_time_zone">TIME ZONE</string>
    <string name="text_need_assistance">Whenever you need assistance,\nyou can reach us via</string>
    <string name="email_support">support@crewlounge.aero</string>
    <string name="email_address">Email address</string>
    <string name="have_to_acknowledge_our_email_message">( you\'ll receive an email to acknowledge )</string>
    <string name="how_can_we_reach_you">How can we reach you ?</string>
    <string name="title_sync">Cloud Sync</string>
    <string name="title_devices">My Devices</string>
    <string name="title_reset_database">Reset Database</string>
</resources>