<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/title_sync" />
    <item
        android:id="@+id/navigation_devices"
        android:icon="@drawable/ic_devices"
        android:title="@string/title_devices" />
    <item
        android:id="@+id/navigation_reset_database"
        android:icon="@drawable/ic_aircraft"
        android:title="@string/title_reset_database" />
<!--    <item
        android:id="@+id/navigation_gift"
        android:icon="@drawable/ic_gift"
        android:title="@string/title_gift" />

    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_help"
        android:title="@string/title_help" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_setting" />-->

</menu>