<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/mcc_blue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_edit_flight"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_text_menu_delete"
        android:padding="@dimen/padding_item_menu_delete"
        android:paddingLeft="@dimen/margin_item_menu_delete"
        android:background="@drawable/btn_option_delete"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/white"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_edit_flight_paste"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_text_menu_delete"
        android:padding="@dimen/padding_item_menu_delete"
        android:background="@drawable/btn_option_delete"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@android:color/white"
        />

    <LinearLayout android:id="@+id/lnNextFlight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_next_flight"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_text_menu_delete"
            android:padding="@dimen/padding_item_menu_delete"
            android:background="@drawable/btn_option_delete"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/white"
            />
    </LinearLayout>

    <LinearLayout android:id="@+id/lnReturnFlight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_return_flight"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_text_menu_delete"
            android:padding="@dimen/padding_item_menu_delete"
            android:background="@drawable/btn_option_delete"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/white"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_delete_flight"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_text_menu_delete"
        android:padding="@dimen/padding_item_menu_delete"
        android:background="@drawable/btn_option_delete"/>

</LinearLayout>